<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="compsci290.edu.duke.tutor.loginregistration.LoginActivity"
    android:background="@drawable/tutorpic">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/loginLinear"
        android:weightSum="1"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:id="@+id/logoHolder"
            android:layout_marginTop="20dp"
            android:layout_height="150dp"
            android:gravity="center" >


            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:srcCompat="@mipmap/ic_launcher"
                android:id="@+id/imageView" />
            <TextView
                android:text="TutorMe"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:id="@+id/app_name"
                android:textColor="#ffffff"
                android:textSize="30sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/checkboxHolder"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/uidPWDLayout">

                <EditText
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:id="@+id/uemail"
                    android:layout_alignParentEnd="true"
                    android:hint="Username (case sensitive)"
                    android:layout_width="match_parent" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:layout_alignParentStart="true"
                    android:id="@+id/pwd"
                    android:layout_alignParentEnd="true"
                    android:hint="Password" />
            </LinearLayout>

            <CheckBox
                android:text="Remember Me"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/checkBox" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            android:id="@+id/loginbtnHolder"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp">

            <Button
                android:text="Login"
                android:id="@+id/lgn"
                android:layout_below="@+id/pwd"
                android:layout_marginTop="30dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/button_boder"
                android:cursorVisible="true"
                android:layout_gravity="top"
                android:textColor="@android:color/white" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/linkHolder">

                <TextView
                    android:text="Register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/lgn"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="16dp"
                    android:id="@+id/Rlink"
                    android:layout_weight="1"
                    android:textColor="#086A87" />
                <TextView
                    android:text="Forgot Your Password?"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/lgn"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="16dp"
                    android:id="@+id/Flink"
                    android:layout_weight="1"
                    android:textColor="#086A87" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
