...
    android:layout_height="wrap_content"

    xmlns:card_view="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_review_card_view"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        card_view:cardCornerRadius="4dp">

...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textAppearance="@style/myStyle"/>

            <TextView
                android:id="@+id/profile_review_card_review_string"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="He is such a brilliant tutor!"
                android:textSize="14sp"
                android:paddingStart="8dp"
                android:layout_marginBottom="4dp"/>
...
