...
                android:elevation="4dp"
                android:textSize="18sp"
                android:padding="20dp"
                android:text="Background"/>

            <TextView
                android:id="@+id/profile_info_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:background="#fff"
                android:clickable="true"
                android:elevation="4dp"
                android:textSize="18sp"
                android:padding="20dp"
                android:text="Reviews" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>
