<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.MainActivity">

    <item
        android:id="@+id/action_about"
        android:title="About"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_signout"
        android:title="Sign Out"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_request_sent"
        android:title="Request Sent"
        android:orderInCategory="100"
        app:showAsAction="never" />
    
</menu>